k8s/_old/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reef-frontend
  labels:
    app.kubernetes.io/part-of: reef
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: reef
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ietf-tools/reef-frontend:$APP_IMAGE_TAG
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: reef-frontend
  labels:
    app.kubernetes.io/part-of: reef
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
    - port: 80
      targetPort: 3000
